# flecs

./: CMakeLists.txt  flecs.c  flecs.h
cmake/: target_default_compile_warnings.cmake
include/: flecs.h
include/flecs/: bake_config.h
src/: bootstrap.c  entity.c  entity_filter.c  id_record.c  id_record.h  iter.c  observable.c  observer.c  private_types.h  query.c  stage.c  table.c  table.h  table_graph.c  world.c
src/addons/: rest.c  snapshot.c
src/addons/json/: deserialize.c  serialize.c
src/addons/os_api_impl/: windows_impl.inl
src/addons/rules/: engine.c
test/api/src/: WorldInfo.c
